# solanaceae_llama-cpp-web

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt  plugin_llama-cpp-web.cpp  plugin_rpbot.cpp
src/: CMakeLists.txt  test1.cpp
src/solanaceae/llama-cpp-web/: llama_cpp_web_impl.cpp  llama_cpp_web_impl.hpp  llama_cpp_web_interface.hpp  text_completion_interface.hpp
src/solanaceae/rpbot/: message_prompt_builder.cpp  message_prompt_builder.hpp  rpbot.cpp  rpbot.hpp  rpbot_commands.cpp  rpbot_states.hpp
